# avb

./: .gitignore  Makefile  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml
avb/: __init__.py  _expect.py  _expect_log_prob.py  dispatch.py  distributions.py  infer.py  nodes.py  unconstrained.py  util.py
avb/expectation/: __init__.py  _expect.py  _expect_log_prob.py
examples/: penguins.md  tycho.md
tests/: conftest.py  test_dispatch.py  test_distributions.py  test_expectation.py  test_infer.py  test_smoke.py  test_unconstrained.py  test_util.py
